testcases/error/duplicated_identifier_enum_mangled.veryl
module duplicated_identifier_enum_mangled {
    const Foo_A: u32      = 1;
    enum Foo: logic<2> {
        A,
    }
}
